# Dual-Elo-Rating

./: .zenodo.json  AGENTS.md  README.md
.github/workflows/: cross-platform-build.yml  windows-msvc-build.yml
DomArchive/: README.md  runDomArchive.sh
DomArchive/Data/: Foerster_2016a.csv  Foerster_2016b.csv  Franz_2015a.csv  Franz_2015b.csv  Franz_2015c.csv  Franz_2015d.csv  Franz_2015e.csv  Ipek_2023.csv  Langley_2018.csv  McCune_2019a.csv  McCune_2019c.csv  McCune_2019d.csv  McCune_2019e.csv  McCune_2019f.csv  Strauss_2019a.csv  Strauss_2019b.csv  Strauss_2019c.csv  Strauss_2019d.csv  Vilette_2020.csv
DomArchive/Results/: Foerster_2016a.txt  Foerster_2016b.txt  Franz_2015a.txt  Franz_2015b.txt  Franz_2015c.txt  Franz_2015d.txt  Franz_2015e.txt  Ipek_2023.txt  Ipek_2023_elo_rating.txt  Langley_2018.txt  McCune_2019a.txt  McCune_2019c.txt  McCune_2019d.txt  McCune_2019e.txt  McCune_2019f.txt  Strauss_2019a.txt  Strauss_2019b.txt  Strauss_2019c.txt  Strauss_2019d.txt  Vilette_2020.txt
Dual Elo/: CMakeLists.txt  DualEloRating  README.md
Dual Elo/binaries/: DualEloRating-linux  DualEloRating-macos
Dual Elo/include/: calculation.h  combinational_indices.h  combinational_spikes.h  csv_parser.h  full_optimizer.h  k2_optimizer.h  optimized_elo.h  player_registry.h  verbose.h
Dual Elo/src/: combinational_indices.cpp  combinational_spikes.cpp  convert.cpp  csv_parser.cpp  dual_elo_rating.cpp  dual_k_rating.cpp  full_optimizer.cpp  k2_optimizer.cpp  optimized_elo.cpp  player_registry.cpp  verbose.cpp
Dual-K Elo/: README.md
Dual-K Elo/include/: convert.h  k2_optimizer.h  verbose.h
Dual-K Elo/src/: calculation.cpp  combinational_spikes.cpp  csv_parser.cpp
Rating-based Simuation/: README.md  dualRun.sh
Rating-based Simuation/Code/: evaluate.py  generateData.py  parseResults.py  tabulize.py
Rating-based Simuation/Data/G10_I200_S0/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  3.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv  37.csv  38.csv  39.csv  4.csv  40.csv  41.csv  42.csv  43.csv  44.csv  (+60 more)
Rating-based Simuation/Data/G10_I200_S50/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  3.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv  37.csv  38.csv  39.csv  4.csv  40.csv  41.csv  42.csv  43.csv  44.csv  (+61 more)
Rating-based Simuation/Data/G10_I400_S0/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  3.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv  37.csv  38.csv  39.csv  4.csv  40.csv  41.csv  42.csv  43.csv  44.csv  (+61 more)
Rating-based Simuation/Data/G10_I400_S50/: 0.csv  (+100 more)
Rating-based Simuation/Results/: eval_table.csv  eval_table.txt
Simulation/: README.md  runExperiments.sh
Simulation/Code/: mixtureDataGeneration.py  nullHypothesisDataGeneration.py  requirements.txt  suddenDataGeneration.py
Simulation/Rank Correlation/: corr.sh  getCorrelationsMixture.py  getCorrelationsSudden.py  getRatings.py  summarizeCorrelations.py
(+3468 files in other folders)
